<resources>
    <string name="app_name">MapBoxAndroidApp</string>

    <string name="hello_world">Hello Margge!</string>
    <string name="action_settings">Settings</string>
    <string name="accessToken">pk.eyJ1IjoibWFyZ2dlIiwiYSI6ImNpbmZmYnJueTB5M2p0cWx3aTE5Z3I1dWsifQ.GNBryESztCMrPDkRSotATA</string>
    <string name="action_dark">Dark</string>
    <string name="action_emerald">Emerald</string>
    <string name="action_light">Light</string>
    <string name="action_mapbox_streets">Mapboox Streets</string>
    <string name="action_satelite">Satelite</string>
    <string name="action_satelite_streets">Satelite streets</string>
</resources>
