<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_dark"
        android:orderInCategory="100"
        android:title="@string/action_dark"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_emerald"
        android:orderInCategory="100"
        android:title="@string/action_emerald"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_light"
        android:orderInCategory="100"
        android:title="@string/action_light"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mapbox_streets"
        android:orderInCategory="100"
        android:title="@string/action_mapbox_streets"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_satelite"
        android:orderInCategory="100"
        android:title="@string/action_satelite"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_satelite_streets"
        android:orderInCategory="100"
        android:title="@string/action_satelite_streets"
        app:showAsAction="never" />
</menu>